@startuml GUI and Template Component Diagram

skinparam class {
    BackgroundColor<<GUI>> LightBlue
    BackgroundColor<<Template>> LightGreen
}

package "GUI" {
    class LibraryGUI <<GUI>> {
        - bookTable: JTable
        - tableModel: BookTableModel
        - buttons: JButton[]
        - libraryController: LibraryController
        - sortManager: SortStrategyManager
        + LibraryGUI()
        - loadBooks(): void
    }

    class BookTableModel <<GUI>> {
        - columnNames: String[]
        - books: List<Book>
        + getRowCount(): int
        + getColumnCount(): int
        + getValueAt(row: int, col: int): Object
        + getColumnName(col: int): String
        + getBookAt(row: int): Book
        + setBooks(books: List<Book>): void
    }

    class SearchDialog <<GUI>> {
        - searchField: JTextField
        - titleRadio: JRadioButton
        - authorRadio: JRadioButton
        - statusCombo: JComboBox
        - ratingCombo: JComboBox
        - searchButton: JButton
        - cancelButton: JButton
        + SearchDialog(parent: Frame)
        + showDialog(): SearchFilter
    }
}

package "Template" {
    abstract class BookDialogTemplate <<Template>> {
        # titleField: JTextField
        # authorField: JTextField
        # isbnField: JTextField
        # genreField: JTextField
        # ratingField: JTextField
        # statusCombo: JComboBox
        + BookDialogTemplate(parent: JFrame, title: String)
        # validateFields(): boolean
        # {abstract} onConfirm(): void
    }

    class AddBookDialog <<Template>> {
        - newBook: Book
        + AddBookDialog(parent: JFrame)
        + onConfirm(): void
        + showDialog(): Book
    }

    class UpdateBookDialog <<Template>> {
        - updatedBook: Book
        + UpdateBookDialog(parent: Frame, book: Book)
        + onConfirm(): void
        + showDialog(): Book
    }
}

' Relazioni interne GUI
LibraryGUI *-- BookTableModel
LibraryGUI --> SearchDialog : creates

' Relazioni Template
BookDialogTemplate <|-- AddBookDialog
BookDialogTemplate <|-- UpdateBookDialog

' Relazioni tra GUI e Template
LibraryGUI --> AddBookDialog : creates
LibraryGUI --> UpdateBookDialog : creates

@enduml

